sandbox/output
MedicineClashTest.java:30: error: cannot find symbol
        assertEquals(clashedSet, medicineClash.Of(customers));
                                                  ^
  symbol:   variable customers
  location: class MedicineClashTest
MedicineClashTest.java:30: error: cannot find symbol
        assertEquals(clashedSet, medicineClash.Of(customers));
                                 ^
  symbol:   variable medicineClash
  location: class MedicineClashTest
2 errors
